--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate2",
+  "name": "boilerplate",
   "version": "1.0.0",
-  "description": "Simple react app",
+  "description": "simple react app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,8 +10,8 @@
   "author": "Kangbo Lu",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.9.1",
-    "express": "^4.13.4",
+    "axios": "^0.16.2",
+    "express": "^4.15.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0"
@@ -21,9 +21,9 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.23.1",
-    "foundation-sites": "6.2.0",
+    "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
